[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
counted-array = "0.1.2"
nom = "7.1.1"
num = "0.4.1"
pathfinding = "4.0.0"
rand = "0.8.5"
regex = "1.7.0"
scan_fmt = "0.2.6"
